Set up Gradle which can build and run Haru

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,13 @@ plugins {
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'checkstyle'
+    // other plugins
 }
 
+checkstyle {
+    toolVersion = '11.0.0'
+}
 repositories {
     mavenCentral()
 }
@@ -28,11 +33,11 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("haru.Haru")
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "haru"
     archiveClassifier = null
 }
 
