--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'checkstyle'
-    // other plugins
 }
 
 checkstyle {
@@ -37,8 +36,7 @@ application {
 }
 
 shadowJar {
-    archiveBaseName = "haru"
-    archiveClassifier = null
+    archiveFileName = "haru.jar"
 }
 
 run{
